[package]
name = "solanalotto"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.5.8"
thiserror = "1.0.21"
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}
arrayref = "0.3.6"

[dev-dependencies]
assert_matches = "1.4.0"
solana-sdk = "1.5.8"
solana-program-test = "1.5.8"
solana-validator = "1.5.8"
tokio = { version = "0.3", features = ["macros"]}

[lib]
crate-type = ["cdylib", "lib"]
